--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<!-- 添加注释：链接到KMS激活页面，用于一键激活Windows和Office -->
 						<li>
 							<a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/tvbox.json').then(() => { alert('复制成功！赞助成员有更多特殊站点！'); }).catch(err => { console.error('复制失败: ', err); });"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io\tvbox\OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">
 								<colourful-text>
 									🪐tvbox单仓视频订阅链接
@@ -111,7 +111,7 @@
 						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox单仓视频订阅链接 -->
 						<li>
 							<a href="#"
-								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io\tvbox\多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">
 								<colourful-text>
 									🪐tvbox多仓视频订阅链接
