--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="release">
 		<div class="body">
 			<!-- 定义一个包含图片的div元素 -->
-			<div class="image"><img class="hover-zoom" src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png"
+			<div class="image"><img class="hover-zoom" src="img/logo.jpg"
 					onclick="location.reload();"></div>
 			<div class="title">
 				<h2 id="toggleText"></h2>
