--- a/update.html
+++ b/update.html
@@ -40,9 +40,9 @@
       }
     </style>
   </head>
-  <h2>Xtreme Modding Codes</h2>
+  <h2>🌎网站：bin1site1.github.io</h2>
   <body>
-    <p>The version of this app that you're using has expired. Please download the latest version to continue using this app.</p>
+    <p>您正在使用的此应用程序的版本已过期。请下载最新版本以继续使用此应用程序。</p>
     <button onclick="window.location.href='https://bin1site1.github.io'">Update Now</button>
   </body>
 </html>
