--- a/update.html
+++ b/update.html
@@ -43,6 +43,6 @@
   <h2>🌎网站：bin1site1.github.io</h2>
   <body>
     <p>您正在使用的此应用程序的版本已过期。请下载最新版本以继续使用此应用程序。</p>
-    <button onclick="window.location.href='https://bin1site1.github.io'">Update Now</button>
+    <button onclick="window.location.href='https://bin1site1.github.io'">立即更新</button>
   </body>
 </html>
