--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
 						<p></p>
 						Office密钥 | 软件注册码 | 网课教程学习课程
 						<p></p>
-						<a style="color: #0099fa;">🎉—— 赞助已经关闭，优质资源赞助者优享！</a>
+						<a style="color: #0099fa;">🎉—— 赞助已经关闭，即将重新开放新一轮的赞助活动！</a>
+						<p></p>
+						<a style="color: #fa0000;">通知：<br>免费普通成员QQ群即将停止分享软件资源，已经分享的资源一直保留直到过期失效，QQ群将转为聊天交流群，不再分享任何资源，QQ频道交流需要发帖，不支持发聊天消息。<br>注：赞助成员群与此通知无关，不必理会。</a>
 					</h4>
 					<p></p>
 				</div>
