--- a/update.html
+++ b/update.html
@@ -1,48 +1,92 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        font-size: 5px;
-        line-height: 1.5;
-        background-color: #f9f9f9;
-        text-align: center;
-        padding-top: 50px;
-      }
 
-      h2 {
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
+<head>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      /* 设置字体为Arial或无衬线字体 */
+      font-size: 5px;
+      /* 设置字体大小为5像素 */
+      line-height: 1.5;
+      /* 设置行高为1.5倍字体大小 */
+      background-color: #f9f9f9;
+      /* 设置背景颜色为浅灰色 */
+      text-align: center;
+      /* 设置文本对齐方式为居中 */
+      padding-top: 50px;
+      /* 设置顶部内边距为50像素 */
+      margin: 0;
+      /* 设置外边距为0 */
+    }
 
-      p {
-        font-size: 12px;
-        margin-bottom: 5px;
-      }
+    h2 {
+      font-size: 18px;
+      /* 设置字体大小为18像素 */
+      font-weight: bold;
+      /* 设置字体加粗 */
+      margin-bottom: 10px;
+      /* 设置底部外边距为10像素 */
+    }
 
-      button {
-        background-color: #4CAF50;
-        border: none;
-        color: white;
-        padding: 6px 10px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        border-radius: 5px;
-        cursor: pointer;
-      }
+    p {
+      font-size: 12px;
+      /* 设置字体大小为12像素 */
+      margin-bottom: 5px;
+      /* 设置底部外边距为5像素 */
+    }
 
-      button:hover {
-        background-color: #3e8e41;
-      }
-    </style>
-  </head>
-  <h2>🌎网站：bin1site1.github.io</h2>
-  <body>
-    <p>您正在使用的此应用程序的版本已过期。请下载最新版本以继续使用此应用程序。</p>
-    <button onclick="window.location.href='https://bin1site1.github.io'">立即更新</button>
-  </body>
+    button {
+      background-color: #4CAF50;
+      /* 设置背景颜色为绿色 */
+      border: none;
+      /* 去除边框 */
+      color: white;
+      /* 设置文字颜色为白色 */
+      padding: 6px 10px;
+      /* 设置内边距 */
+      text-align: center;
+      /* 文字居中对齐 */
+      text-decoration: none;
+      /* 去除文字装饰 */
+      display: inline-block;
+      /* 设置为内联块元素 */
+      font-size: 16px;
+      /* 设置字体大小 */
+      border-radius: 5px;
+      /* 设置边框圆角 */
+      cursor: pointer;
+      /* 设置鼠标悬停时的光标样式为指针 */
+      margin-top: 10px;
+      /* 设置顶部外边距 */
+      margin-bottom: 10px;
+      /* 设置底部外边距 */
+      margin-left: 10px;
+      /* 设置左边距为10像素 */
+      margin-right: 10px;
+      /* 设置右边距为10像素 */
+    }
+
+    button:hover {
+      background-color: #3e8e41;
+      /* 设置背景颜色为深绿色 */
+    }
+  </style>
+</head>
+<h2>🌎网站：bin1site1.github.io</h2>
+
+<body>
+  <p>
+    1、该资源完全免费，若是付费购买所得即是被倒卖软件的骗了，建议退款举报处理。
+    <br>
+    2、仅供学习和技术交流，不得非法使用或商用，若侵犯了您的权益，请联系邮箱删除。
+    <br>
+    3、请尊重开发者的劳动成果，如需要更好的服务和安全性与稳定性，请支持正版软件。
+  </p>
+  <button onclick="window.location.href='https://bin1site1.github.io'">bin1site主页</button>
+  <button onclick="window.location.href='https://pd.qq.com/s/1oqtpdvbd'">QQ频道</button>
+  <button onclick="window.location.href='mailto:3295532395@qq.com'">Email联系</button>
+
+</body>
+
 </html>
