--- a/update.html
+++ b/update.html
@@ -53,10 +53,10 @@
           <p></p>
           <div class="links">
             <ul>
+              <li><a href="https://bin1site1.github.io" target="_blank" class="hover-zoom">bin1site主页</a></li>
+              <!-- 链接到bin1site主页 -->
               <li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道</a></li>
               <!-- 链接到QQ频道 -->
-              <li><a href="https://bin1site1.github.io" target="_blank" class="hover-zoom">bin1site主页</a></li>
-              <!-- 链接到QQ频道Ⅱ -->
               <li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Email联系</a></li>
               <!-- 链接到电子邮件联系 -->
             </ul>
