--- a/update.html
+++ b/update.html
@@ -53,7 +53,7 @@
           <p></p>
           <div class="links">
             <ul>
-              <li><a href="https://bin1site1.github.io" target="_blank" class="hover-zoom">bin1site主页</a></li>
+              <li><a href="https://bin1site1.github.io" target="_blank" class="hover-zoom">bin1site</a></li>
               <!-- 链接到bin1site主页 -->
               <li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道</a></li>
               <!-- 链接到QQ频道 -->
