--- a/update.html
+++ b/update.html
@@ -11,6 +11,18 @@
   <link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
   <script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
   <script src="js/colourful-text.js"></script><!-- 8小时彩色文字切换 -->
+  <style> 
+  body {
+	background-image: #f9f9f9;
+	/* 替换为您的背景图片URL */
+	background-size: cover;
+	/* 使背景图片覆盖整个页面 */
+	background-repeat: no-repeat;
+	/* 防止背景图片重复 */
+	background-attachment: fixed;
+	/* 使背景图片固定，不随滚动条滚动 */
+}
+  </style>
 </head>
 
 <body>
