--- a/update.html
+++ b/update.html
@@ -62,7 +62,8 @@ th {
 }
 
 body {
-	background-image: #f9f9f9;
+	background-image: #ffffff;
+	/* 设置背景图片 */
 	background-size: cover;
 	/* 使背景图片覆盖整个页面 */
 	background-repeat: no-repeat;
@@ -86,13 +87,12 @@ body {
 
 .body {
 	/* 设置背景颜色为白色 */
-	background: #f9f9f9;
+	background: #ffffff;
 	/* 设置边框圆角为12像素 */
 	border-radius: 12px;
 	/* 设置顶部外边距为80像素 */
 	margin-top: 80px;
-	/* 设置盒子阴影效果 */
-	box-shadow: 0 5px 70px #96caf7, 0 0 10px #03ef2a89;
+
 }
 
 /* ---代码分割线--- */
@@ -165,7 +165,7 @@ colourful-text {
 	/* 设置背景颜色为白色 */
 	margin-top: -50px;
 	/* 设置上外边距 */
-	box-shadow: 0px 5px 50px 0px #6c44fc, 0px 0px 0px 7px rgba(107, 74, 255, 0.5);
+	box-shadow: 0px 5px 30px 0px #6c44fc, 0px 0px 0px 5px rgba(107, 74, 255, 0.5);
 	/* 设置阴影效果 */
 }
 
