--- a/PopUp.html
+++ b/PopUp.html
@@ -430,14 +430,14 @@
 					<div class="links">
 						<ul>
 							<li><a href="https://bin1site1.github.io" target="_blank" class="hover-zoom"
-									style="color: #000000;">bin1site</a>
+									style="color: #000000;"><b>bin1site</b></a>
 							</li>
 							<!-- 链接到bin1site主页 -->
 							<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom"
-									style="color: #000000;">QQ频道</a></li>
+									style="color: #000000;"><b>QQ频道</b></a></li>
 							<!-- 链接到QQ频道 -->
 							<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom"
-									style="color: #000000;">Email</a></li>
+									style="color: #000000;"><b>Email</b></a></li>
 							<!-- 链接到电子邮件联系 -->
 						</ul>
 					</div>
