--- a/PopUp.html
+++ b/PopUp.html
@@ -434,7 +434,7 @@
 							</li>
 							<!-- 链接到bin1site主页 -->
 							<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom"
-									style="color: #000000;"><b>QQ频道</b></a></li>
+									style="color: #000000;"><b>QQ Chat</b></a></li>
 							<!-- 链接到QQ频道 -->
 							<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom"
 									style="color: #000000;"><b>Email</b></a></li>
