--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<!--代码分割线-->
 				<div class="tips">
 					<zanzhu>
-						- 赞助专享 -
+						赞助专享
 					</zanzhu>
 					<h4 class="bordered-box">
 						Android破解软件 | Windows破解软件 | Windows密钥
