--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 	<div class="release">
 		<div class="body">
 			<!-- 定义一个包含图片的div元素 -->
-			<div class="image"><img class="hover-zoom" src="img/logo.jpg"
-					onclick="location.reload();"></div>
+			<div class="image"><img class="hover-zoom" src="img/logo.jpg" onclick="location.reload();"></div>
 			<div class="title">
 				<h2 id="toggleText"></h2>
 				<script>
