--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 				<!--代码分割线-->
 				<div class="tips">
 					<zanzhu>
-						赞助专享
+						赞助成员专享
 					</zanzhu>
 					<h4 class="bordered-box">
 						Android破解软件 | Windows破解软件 | Windows密钥
 						<p></p>
-						Office密钥 | 软件注册码 | 网课教程学习课程
+						Office密钥 | 软件注册码 | 教程学习资料
 						<p></p>
-						<a style="color: #0099fa;">🎉—— 赞助已关闭，即将开放新一轮的赞助活动！</a>
+						<a style="color: #0099fa;">可赞助加入赞助群获取资源，详情可联系频道主！</a>
 					</h4>
 					<p></p>
 				</div>
