--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<!-- 链接到QQ频道 -->
 						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">QQ频道Ⅱ</a></li>
 						<!-- 链接到QQ频道Ⅱ -->
-						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Email联系</a></li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">联系我们</a></li>
 						<!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
