--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<p></p>
 						Office密钥 | 软件注册码 | 教程学习资料
 						<p></p>
-						<a style="color: #0099fa;">可赞助加入赞助群获取资源，详情可联系频道主！</a>
+						<a style="color: #0099fa;">QQ群仅闲聊，资源需赞助加入赞助群获取！</a>
 					</h4>
 					<p></p>
 				</div>
