--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="yandex" content="index,follow"> <!-- 设置雅虎搜索引擎抓取 -->
 	<meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
 	<meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
-	<title>🪪bin1site·导航</title> <!-- 设置页面标题 -->
+	<title>🪪睡觉💤摸Pipi</title> <!-- 设置页面标题 -->
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
 	<script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
