--- a/PopUp.html
+++ b/PopUp.html
@@ -197,7 +197,7 @@
 			/* 设置字体大小 */
 			padding-top: 20px;
 			/* 设置顶部内边距 */
-			color: #676767;
+			color: #000000;
 			/* 设置文本颜色 */
 			letter-spacing: 2px;
 			/* 设置字符间距 */
@@ -249,7 +249,7 @@
 			/* 设置字体大小 */
 			font-size: 16px;
 			/* 设置字体颜色 */
-			color: #fff;
+			color: #fdfdfd;
 			/* 设置外边距 */
 			margin: 2px;
 			/* 设置边框圆角 */
@@ -261,7 +261,7 @@
 			/* 设置字体粗细 */
 			font-weight: 700;
 			/* 设置背景渐变 */
-			background: #5cbcf7;
+			background: linear-gradient(to right, #6bc3f9, #75a6f4,#9c85f8);
 			/* 设置定位方式 */
 			position: relative;
 			/* 设置层级 */
