--- a/index.html
+++ b/index.html
@@ -45,30 +45,8 @@
 					<canvas id="canvas"></canvas>
 					<script src="js/clock.js"></script><!-- 引入时钟脚本文件 -->
 					<br></br>
-					<b>Android | Windows | Other</b>
+					<b>资源分享 | 技术教程 | 交流学习</b>
 				</p>
-				<!--代码分割线-->
-				<div class="card">
-					<script>
-						// 定义一个包含多个对象的数组，每个对象包含标题和文本信息
-						const items = [
-							{ title: "软件", txt: "Software" },
-							{ title: "教程", txt: "Study" },
-							{ title: "密钥", txt: "Serial-Key" },
-							{ title: "技术", txt: "Technology" }
-							// 添加更多对象
-						];
-						// 遍历数组中的每个对象，并使用 document.write 方法生成 HTML 内容
-						items.forEach(item => {
-							document.write(`
-							<div class="card__item">
-                       <div class="card__title">${item.title}</div>
-                       <div class="card__txt">${item.txt}</div></div>
-				   		`);
-						});
-						// 定义一个包含多个标签的元素
-					</script>
-				</div>
 				<!--代码分割线-->
 			</div>
 			<!--代码分割线-->
