--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 			<div class="main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道Ⅰ</a></li>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">加入我们</a></li>
 						<!-- 链接到QQ频道 -->
-						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">QQ频道Ⅱ</a></li>
+						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">加入我们2</a></li>
 						<!-- 链接到QQ频道Ⅱ -->
 						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">联系我们</a></li>
 						<!-- 链接到电子邮件联系 -->
