--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<ul>
 						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">加入我们</a></li>
 						<!-- 链接到QQ频道 -->
-						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">加入我们2</a></li>
+						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">加入社群</a></li>
 						<!-- 链接到QQ频道Ⅱ -->
 						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">联系我们</a></li>
 						<!-- 链接到电子邮件联系 -->
