--- a/index.html
+++ b/index.html
@@ -59,38 +59,19 @@
 						<!-- 链接到QQ频道Ⅱ -->
 						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">联系我们</a></li>
 						<!-- 链接到电子邮件联系 -->
+						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">KMS激活</a></li>
+						<li><a href="#"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">tvbox单仓</a></li>
+						<!-- 链接到QQ频道Ⅱ -->
+						<li><a href="#"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">tvbox多仓</a></li>
+						<!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
 				<!--代码分割线-->
 				<div class="kms-tvbox">
-					<ul>
-						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">
-								<colourful-text>
-									🚀 KMS激活Windows与Office
-								</colourful-text>
-							</a></li>
-						<!-- 添加注释：链接到KMS激活页面，用于一键激活Windows和Office -->
-						<li>
-							<a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">
-								<colourful-text>
-									🪐tvbox单仓视频订阅链接
-								</colourful-text>
-							</a>
-						</li>
-						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox单仓视频订阅链接 -->
-						<li>
-							<a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">
-								<colourful-text>
-									🪐tvbox多仓视频订阅链接
-								</colourful-text>
-							</a>
-						</li>
-						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox多仓视频订阅链接 -->
-					</ul>
 					<div class="tips">
 						<zanzhu>
 							赞助成员专享
