--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 							赞助成员专享
 						</zanzhu>
 						<h4 class="bordered-box">
-							Android破解软件 、 Windows破解软件 、 Windows密钥
+							Android破解软件 | Windows破解软件 | Windows密钥
 							<p></p>
-							Office密钥 、 软件注册码 、 教程学习资料
+							Office密钥 | 软件注册码 | 教程资料
 						</h4>
 						<p></p>
 						<a style="color: #0099fa;">提示：QQ交流群仅闲聊，获取资源需赞助加入赞助群！</a>
