--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">KMS激活</a></li>
 						<li><a href="#"
 								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">tvbox单仓</a></li>
+								class="hover-zoom">TVBOX单仓</a></li>
 						<!-- 链接到QQ频道Ⅱ -->
 						<li><a href="#"
 								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">tvbox多仓</a></li>
+								class="hover-zoom">TVBOX多仓</a></li>
 						<!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
