--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="kms-tvbox">
 					<div class="tips">
 						<zanzhu>
-							赞助成员专享
+							—— 赞助成员专享 ——
 						</zanzhu>
 						<h4 class="bordered-box">
 							Android破解软件 | Windows破解软件 | Windows密钥
