--- a/index.html
+++ b/index.html
@@ -74,15 +74,13 @@
 				<div class="kms-tvbox">
 					<div class="tips">
 						<zanzhu>
-							—— 赞助成员专享 ——
+							—— 赞助成员 ——
 						</zanzhu>
 						<h4 class="bordered-box">
-							Android破解软件 | Windows破解软件 | Windows密钥
-							<p></p>
-							Office密钥 | 软件注册码 | 教程资料
-						</h4>
-						<p></p>
-						<a style="color: #0099fa;">提示：QQ交流群仅闲聊，获取资源需赞助加入赞助群！</a>
+							✅高级赞助群：Android破解软件 、 Windows破解软件、Windows密钥、Office密钥、软件注册码、教程资料 等资源分享！<br>
+							✅普通成员群：无任何资源分享，仅交流学习！
+						</h4><br>
+
 					</div>
 					<!--代码分割线-->
 				</div>
