--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 				<div class="kms-tvbox">
 					<div class="tips">
 						<zanzhu>
-							—— 赞助成员 ——
+							重要说明
 						</zanzhu>
 						<h4 class="bordered-box">
 							✅高级赞助群：Android破解软件 、 Windows破解软件、Windows密钥、Office密钥、软件注册码、教程资料 等资源分享！<br>
-							✅普通成员群：无任何资源分享，仅交流学习！
+							✅普通成员群（免费）：无任何资源分享，仅交流学习！
 						</h4><br>
 
 					</div>
