--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 				<!--代码分割线-->
 				<div class="kms-tvbox">
 					<div class="tips">
-						<zanzhu>
-							重要说明
-						</zanzhu>
 						<h4 class="bordered-box">
-							✅高级赞助群：Android破解软件 、 Windows破解软件、Windows密钥、Office密钥、软件注册码、教程资料 等资源分享！<br>
-							✅普通成员群（免费）：无任何资源分享，仅交流学习！
-						</h4><br>
-
+							✅高级赞助群（赞助¥50即可加入）：<br>
+							android绿色软件 、 Windows绿色软件、Windows密钥、Office密钥、软件注册码、教程资料 等资源分享！<br>
+							✅基础赞助群（待开放）：单独 android绿色软件。<br>
+							✅普通成员群（免费）：无资源分享，仅交流学习！<br>
+							✅赞助群加入方法：<br>
+							关注QQ频道私信频道主，或者加群私信群主or管理员。
+						</h4>
 					</div>
 					<!--代码分割线-->
 				</div>
