--- a/index.html
+++ b/index.html
@@ -85,18 +85,16 @@
 					<!--代码分割线-->
 				</div>
 				<!--代码分割线-->
+				<a style="color: #0099fa; text-align: center; display: block;">友情提示：为了防止失联，建议收藏保存。</a><br>
 			</div>
 		</div>
 		<!--代码分割线-->
 		<footer>
-			<b>友情提示：为了防止失联，建议收藏保存。</b>
+			<span id="sitetime"></span> <!-- 运行时间 -->
 			<p></p>
 			<b></br>
-				<span id="sitetime"></span> <!-- 运行时间 -->
-				<p></p>
-				<b></br>
-					Copyright ©bin1. 2022
-					<script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
+				Copyright ©bin1. 2022
+				<script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
 		</footer> <!-- 定义页脚部分 -->
 		<!--代码分割线-->
 	</div>
