--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 				<!--代码分割线-->
 				<div class="kms-tvbox">
 					<div class="tips">
+						<a style="color: #fa0000; font-size: 16px; text-align: center; display: block;">交流群分类说明</a><br>
 						<h4 class="bordered-box">
 							✅高级赞助群（¥50）：<br>
 							android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
