--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 						<a style="color: #fa0000; font-size: 16px; text-align: center; display: block;">交流群分类说明</a><br>
 						<h4 class="bordered-box">
 							✅高级赞助群（赞助即可加入）：<br>
-							android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
-							✅基础赞助群（待开放）：单独 android绿色软件。<br>
+							Android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
+							✅基础赞助群（待开放）：仅 Android绿色软件。<br>
 							✅普通成员群（免费）：无资源分享，仅交流学习。<br>
 							✅赞助群加入方法：<br>
 							关注QQ频道私信频道主，或者加群私信群主or管理员。
