--- a/index.html
+++ b/index.html
@@ -53,21 +53,31 @@
 			<div class="main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">加入我们</a></li>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道</a></li>
 						<!-- 链接到QQ频道 -->
-						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">加入社群</a></li>
+						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">QQ频道Ⅱ</a></li>
 						<!-- 链接到QQ频道Ⅱ -->
-						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">联系我们</a></li>
+						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">Telegram</a></li>
+						<!-- 链接到Telegram -->
+						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Email联系</a></li>
 						<!-- 链接到电子邮件联系 -->
+						<li><a href="#"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">TVBOX单仓</a></li>
+						<li><a href="#"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">TVBOX多仓</a></li>
+					</ul>
+				</div>
+				<div class="Tools">
+					<ul>
 						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">KMS激活</a></li>
 						<li><a href="#"
 								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">TVBOX单仓</a></li>
-						<!-- 链接到QQ频道Ⅱ -->
 						<li><a href="#"
 								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">TVBOX多仓</a></li>
-						<!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
 				<!--代码分割线-->
