--- a/index.html
+++ b/index.html
@@ -53,37 +53,23 @@
 			<div class="main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道</a></li>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ Channel</a></li>
 						<!-- 链接到QQ频道 -->
-						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">QQ频道Ⅱ</a></li>
+						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">QQ Channel</a></li>
 						<!-- 链接到QQ频道Ⅱ -->
-						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">Telegram</a></li>
+						<li><a href="https://qm.qq.com/q/k1RdNgeZbO" target="_blank" class="hover-zoom">QQ Group</a></li>
+						<li><a href="https://t.me/bin1site" target="_blank" class="hover-zoom">TG Contact</a></li>
 						<!-- 链接到Telegram -->
-						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Email联系</a></li>
-						<!-- 链接到电子邮件联系 -->
-						<li><a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">TVBOX单仓</a></li>
-						<li><a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">TVBOX多仓</a></li>
-					</ul>
-				</div>
-				<div class="Tools">
-					<ul>
-						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">KMS激活</a></li>
-						<li><a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">TVBOX单仓</a></li>
-						<li><a href="#"
-								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
-								class="hover-zoom">TVBOX多仓</a></li>
+						<li><a href="https://qm.qq.com/q/xj8SNv5ZJY" target="_blank" class="hover-zoom">QQ Contact</a></li>
+						<!-- 链接到作者QQ -->
+						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Mail Contact</a></li>
+						<!-- 链接到Email联系 -->
 					</ul>
 				</div>
 				<!--代码分割线-->
 				<div class="kms-tvbox">
 					<div class="tips">
-						<a style="color: #fa0000; font-size: 16px; text-align: center; display: block;">交流群分类说明</a><br>
+						<a style="color: #fa0000; font-size: 16px; text-align: center; display: block;">群分类说明</a><br>
 						<h4 class="bordered-box">
 							✅高级赞助群（赞助即可加入）：<br>
 							Android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
@@ -96,6 +82,18 @@
 					<!--代码分割线-->
 				</div>
 				<!--代码分割线-->
+				<a style="color: #00abfa; font-size: 16px; text-align: center; display: block;">其他工具</a>
+				<div class="Tools">
+					<ul>
+						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">一键KMS激活Windows与Office</a></li>
+						<li><a href="#"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/OS.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">一键复制TVBOX单仓订阅链接</a></li>
+						<li><a href="#"
+								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">一键复制TVBOX多仓订阅链接</a></li>
+					</ul>
+				</div>
 				<a style="color: #0099fa; text-align: center; display: block;">友情提示：为了防止失联，建议收藏保存。</a><br>
 			</div>
 		</div>
