--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
 			<div class="main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ Channel</a>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">加入QQ频道</a>
 						</li>
 						<!-- 链接到QQ频道 -->
-						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">QQ Channel</a>
+						<li><a href="https://pd.qq.com/s/9oir7qw0g" target="_blank" class="hover-zoom">加入QQ频道</a>
 						</li>
 						<!-- 链接到QQ频道Ⅱ -->
-						<li><a href="https://qm.qq.com/q/k1RdNgeZbO" target="_blank" class="hover-zoom">QQ Group</a>
+						<li><a href="https://qm.qq.com/q/k1RdNgeZbO" target="_blank" class="hover-zoom">加入QQ群组</a>
 						</li>
 						<!-- 链接到QQ群 -->
-						<li><a href="https://t.me/bin1site" target="_blank" class="hover-zoom">TG Contact</a></li>
+						<li><a href="https://t.me/bin1site" target="_blank" class="hover-zoom">TG联系我</a></li>
 						<!-- 链接到Telegram -->
-						<li><a href="https://qm.qq.com/q/xj8SNv5ZJY" target="_blank" class="hover-zoom">QQ Contact</a>
+						<li><a href="https://qm.qq.com/q/xj8SNv5ZJY" target="_blank" class="hover-zoom">QQ联系我</a>
 						</li>
 						<!-- 链接到作者QQ -->
-						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Mail Contact</a></li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Mail联系我</a></li>
 						<!-- 链接到Email联系 -->
 					</ul>
 				</div>
