--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
 					<div class="tips">
 						<a style="color: #fa0000; font-size: 16px; text-align: center; display: block;">群分类说明</a><br>
 						<h4 class="bordered-box">
-							✅普通成员群（免费）：无资源分享，仅交流学习。<br>
-							✅高级赞助群（赞助）：Android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
-							✅基础赞助群（待开放）：仅 Android绿色软件。<br>
-							✅赞助群加入方法：关注QQ频道&加群私信群主or管理员赞助后即可加入。
+							✅赞助成员群（赞助）：Android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
+							✅普通成员群（免费）：仅交流学习，不分享资源。<br>
+							✅VIP群加入方法：QQ频道&加群私信群主赞助后加入。
 						</h4>
 					</div>
 					<!--代码分割线-->
