--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 				<!--代码分割线-->
 				<div class="kms-tvbox">
 					<div class="tips">
-						<a style="color: #fa0000; font-size: 16px; text-align: center; display: block;">群分类说明</a><br>
 						<h4 class="bordered-box">
+							<a style="color: #0070fa; font-size: 16px; text-align: center; display: block;">加群说明</a>
 							✅赞助成员群（赞助）：Android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
 							✅普通成员群（免费）：仅交流学习，不分享资源。<br>
 							✅VIP群加入方法：QQ频道&加群私信群主赞助后加入。
@@ -76,7 +76,7 @@
 					<!--代码分割线-->
 				</div>
 				<!--代码分割线-->
-				<a style="color: #00abfa; font-size: 16px; text-align: center; display: block;">其他工具</a>
+				<a style="color: #00abfa; font-size: 16px; text-align: center; display: block;">其他快捷工具</a>
 				<div class="Tools">
 					<ul>
 						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">一键KMS激活Windows与Office</a></li>
