--- a/PopUp.html
+++ b/PopUp.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="bin1site·导航"> <!-- 设置页面描述 -->
 	<meta name="keywords" content="bin1site,导航,bin1,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
 	<meta name="author" content="bin1"> <!-- 设置作者 -->
-	<title>🪪睡觉💤摸Pipi</title> <!-- 设置页面标题 -->
+	<title>🪪@拾光忘忧</title> <!-- 设置页面标题 -->
 	<style>
 		* {
 			word-wrap: break-word;
