--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<a style="color: #0070fa; font-size: 16px; text-align: center; display: block;">加群说明</a>
 							✅赞助成员群（赞助）：Android和Windows绿色软件、Windows和Office密钥、教程资料、软件注册码等资源。<br>
 							✅普通成员群（免费）：仅交流学习，不分享资源。<br>
-							✅VIP群加入方法：QQ频道&加群私信群主赞助后加入。
+							✅VIP群加入方法：QQ频道加群私信群主赞助加入。
 						</h4>
 					</div>
 					<!--代码分割线-->
