--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
 	<meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
 	<title>🪪@时光忘忧</title> <!-- 设置页面标题 -->
-	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
+	<link rel="stylesheet" href="CSS/styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
 	<script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
 	<script src="js/colourful-text.js"></script><!-- 8小时彩色文字切换 -->
