--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<li><a href="#"
 								onclick="navigator.clipboard.writeText('https://bin1site1.github.io/tvbox/多仓.json').then(() => { alert('复制成功！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">一键复制TVBOX多仓订阅链接</a></li>
-						<li><a href="tvbox/tvbox.html" target="_blank" class="hover-zoom">自由选择网络TVBOX单仓线路</a></li>
+						<li><a href="tvbox/tvbox.html" target="_blank" class="hover-zoom">自由选择TVBOX单仓线路</a></li>
 					</ul>
 				</div>
 				<a style="color: #0099fa; text-align: center; display: block;">友情提示：为了防止失联，建议收藏保存。</a><br>
