--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="main">
 				<div class="links">
 					<ul>
-						<li><a href="https://t.me/SGWYapk" target="_blank" class="hover-zoom">加入TG频道</a>
+						<li><a href="https://t.me/sgwyapk" target="_blank" class="hover-zoom">加入TG频道</a>
 						</li>
 						<!-- 链接到Telegram频道 -->
 						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">加入QQ频道</a>
